# quiggle-games

./: .gitignore  Cargo.toml  Shuttle.toml
.sqlx/: query-05a07f6b6ff0eee8f0639dfbbea2c52c67012755203424700355a733b9040a15.json  query-10a7dc098f81ad0fd7346a782e1ef4e2aad539a62f8b3bb43e64b6238704c5c8.json  query-18f82d1c3e044d0d151eab36a667007eb603fd15086178707e7349173ed9e76c.json  query-39f0017902f14ae3399b2311c7532fc86f485feae1e57d76fa103c988616f4aa.json  query-581913e01d2d84124e751edcf54dd50cff685ecac38dd64b2c4905b4ee23f275.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-8a14bd3d561b90d6012debe72627644c07410b879da158087cc48d277797e3df.json  query-c5f4e5b868d8da00209c83b050cd75e9d83399fc6647c4f59bcaf0b43303888a.json  query-dbed241ef94ad2a15de083970de33f6be8ffc99b5baa9e59843c5087a8736119.json  query-ff5f734828c22e431ebb00e64a0a179244ee578777239a5886572958a532f452.json
base/: Cargo.toml  Secrets.toml.example
base/src/: custom_serenity.rs  handler.rs  main.rs
commands/leaderboard/: Cargo.toml
commands/leaderboard/src/: lib.rs
commands/ping/: Cargo.toml
commands/ping/src/: lib.rs
commands/slidingpuzzle/: Cargo.toml
commands/slidingpuzzle/src/: lib.rs
commands/tictactoe/: Cargo.toml
commands/tictactoe/src/: lib.rs
commands/ultimatetictactoe/: Cargo.toml
commands/ultimatetictactoe/src/: lib.rs
migrations/: 20231122030832_base.sql  20231122065247_base_continuation.sql
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/db/: mod.rs  slidingpuzzle.rs  tictactoe.rs  ultimatetictactoe.rs  user.rs
