[package]
name = "qg-base"
version = "0.3.0"
edition = "2021"

[features]
default = []
ping = ["dep:qg-ping"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
tokio = {version = "1.34.0", features = ["full"]}
qg-shared = {path = "../shared"}
shuttle-runtime = "0.32.0"
shuttle-serenity = "0.32.0"
shuttle-secrets = "0.32.0"
qg-ping = { path = "../commands/ping", optional = true }
qg-tictactoe = { path = "../commands/tictactoe" }
qg-ulttictactoe = { path = "../commands/ultimatetictactoe" }


[dependencies.serenity]
version = "0.11.7"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]

# commands
quiggle-games-ping = {path = "../ping"}
