[package]
name = "qg-base"
version = "0.5.0"
edition = "2021"

[features]
default = ["leaderboard"]
ping = ["dep:qg-ping"]
leaderboard = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
tokio = {version = "1.34.0", features = ["full"]}
qg-shared = {path = "../shared"}
shuttle-runtime = "0.33.0"
# shuttle-serenity = "0.33.0"
shuttle-secrets = "0.33.0"
shuttle-shared-db = { version = "0.33.0", features = ["postgres"] }
qg-ping = { path = "../commands/ping", optional = true }
qg-tictactoe = { path = "../commands/tictactoe" }
qg-ulttictactoe = { path = "../commands/ultimatetictactoe" }
qg-slidingpuzzle = { path = "../commands/slidingpuzzle" }
sqlx = { version = "0.7.2", features = ["postgres", "macros"] }


[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache"]

# commands
quiggle-games-ping = {path = "../ping"}
