[package]
name = "qg-shared"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
anyhow = "1.0.75"
colored = "2.0.4"
async-trait = "0.1.74"

[dependencies.serenity]
version = "0.11.7"
default-features = false
features = ["model"]