[package]
name = "qg-shared"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
anyhow = "1.0.75"
colored = "2.0.4"
async-trait = "0.1.74"
serde = { version = "1.0.130" }
# postcard = { version = "1.0.8", features = ["alloc"] }
serde_json = "1.0.108"
flate2 = "1.0.28"
base64 = "0.21.5"

[dependencies.serenity]
version = "0.11.7"
default-features = false
features = ["model"]
