[package]
name = "qg-shared"
version = "0.5.0-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
anyhow = "1.0.75"
colored = "2.0.4"
async-trait = "0.1.74"
serde = { version = "1.0.130", features = ["derive"] }
# postcard = { version = "1.0.8", features = ["alloc"] }
serde_json = "1.0.108"
flate2 = "1.0.28"
base64 = "0.21.5"
rand = "0.8.5"
rmp-serde = "1.1.2"
sqlx = { version = "0.7.2", features = ["postgres", "macros", "chrono"] }
# shuttle-runtime = { version = "0.33.0" }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache", "builder"]
