[package]
name = "qg-ulttictactoe"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
allow-self-play = []

[dependencies]
qg-shared = { path = "../../shared" }
serde = { version = "1.0.192", features = ["derive"] }
