[package]
name = "qg-ulttictactoe"
version = "0.5.0-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
qg-shared = { path = "../../shared" }
serde = { version = "1.0.192", features = ["derive"] }
